# ffb

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/ffb/: app.py
src/ffb/data/: __init__.py  cache.py  loader.py  stats.py
src/ffb/injury_impact/: engine.py  screen.py
src/ffb/red_zone/: engine.py  screen.py
src/ffb/snap_share/: engine.py  screen.py
src/ffb/start_sit/: engine.py  screen.py
src/ffb/trade_value/: engine.py  screen.py
src/ffb/waiver_wire/: engine.py  screen.py
tests/: conftest.py  test_cache.py  test_snap_share.py  test_waiver_wire.py
